# bevy-atc

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  justfile  setup.sh
.github/workflows/: deploy.yml
assets/aircraft_types/: a320.ron  b737.ron  b747.ron  cessna172.ron  index.ron
assets/levels/: example_level.ron  index.ron
assets/textures/: floppy.kra  floppy.kra~  pipe_down.xcf  pipe_up.xcf
assets/textures/floppy/: pipe.png.import  pipe.xcf
astro/: astro.config.mjs  package.json
astro/src/components/: Bevy.astro  Floppy.astro  GithubLink.astro  Welcome.astro
bash-scripts/: build-release-wasm.sh
crates/atc_recognition_rs/: .gitignore  Cargo.toml  README.md
crates/atc_recognition_rs/examples/: continuous_recognition_demo.rs  graph_parser_demo.rs
crates/atc_recognition_rs/resources/known-strings/: alphabet.json
crates/atc_recognition_rs/resources/parser/: parser_config.ron
crates/atc_recognition_rs/resources/test-recordings/: index.ron
crates/atc_recognition_rs/src/: airlines.rs  aviation_command.rs  errors.rs  graph_parser.rs  lib.rs  main.rs  parser.rs  recognition.rs  speech_to_text.rs  test_utils.rs
crates/atc_recognition_rs/temp/: test-recordings-output.txt
crates/atc_recognition_rs/tests/: test_recordings.rs
crates/atc_recognition_rs/tools/fine_tuning_vibe_coded/: README.md  convert_to_ggml.py  train_atc_model.py
crates/aviation_helper_rs/: Cargo.toml
crates/aviation_helper_rs/resources/known-strings/: alphabet.json
crates/aviation_helper_rs/src/: conversions.rs  errors.rs  lib.rs
crates/aviation_helper_rs/src/clearance/: airlines.rs  aviation_command.rs  mod.rs  turn_direction.rs
crates/aviation_helper_rs/src/types/: altitude.rs  heading.rs  mod.rs
docs/jupyter/: chatgpt.ipynb  smooth.ipynb
libs/aviation_helper_rs/: Cargo.toml
libs/aviation_helper_rs/src/: conversions.rs  heading.rs  lib.rs
public/: index.html
scripts/: update-models.sh
src/: dev_gui.rs  game.rs  main.rs  menu.rs
src/game/: aircraft.rs  aircraft_card.rs  camera.rs  control.rs  heading.rs  level.rs  loading.rs  mod.rs  run_conditions.rs
src/util/: consts.rs  conversions.rs  entities.rs  mod.rs  reflect.rs
tools/fine_tuning_vibe_coded/: requirements.txt
