[package]
name = "bevy-atc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bevy = { version = "0.16.0", "features" = ["wayland", "bevy_dev_tools"] }
rand_core = "0.9"
bevy_rand = "0.11"
bevy_prng = { version = "0.11", features = ["rand_chacha", "wyrand"] }
dotenvy = "0.15.7"
bevy_ui_text_input = { git = "https://github.com/ickshonpe/bevy_ui_text_input.git", branch = "master" }
bevy_simple_scroll_view = "0.4.0"
env_logger = "0.11.8"
strum = { version = "0.27.1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")']
runner = "wasm-server-runner"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
