[package]
name = "atc-recognition-rs"
version = "0.1.0"
edition = "2024"

[features]
test-utils = ["dep:hound"]

[lib]
name = "atc_recognition_rs"
path = "src/lib.rs"

[dependencies]
cpal = "0.16"
regex = "1.11"
ringbuf = "0.4"
ron = { workspace = true }
rubato = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
whisper-rs = { version = "0.15", features = ["vulkan"] }
aviation-helper-rs = { workspace = true }
hound = { version = "3.5", optional = true }

[dev-dependencies]
aviation-helper-rs = { workspace = true, features = ["fs"] }
ron = { workspace = true }
atc-recognition-rs = { path = ".", features = ["test-utils"] }
